--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,19 @@
 version: "3.9"
 services:
-  # backend:
-  #   build: .
-  #   command: sh -c "
-  #     sleep 4 &&
-  #     ./bin/tqs"
-  #   environment:
-  #     - PORT=8080
-  #   ports:
-  #     - "8080:8080"
+  backend:
+    build: .
+    command: sh -c "
+      sleep 4 &&
+      ./bin/tqs"
+    environment:
+      - PORT=8080
+      - MONGODB_USER=tqs
+      - MONGODB_PASS=password
+      - MONGODB_HOST=mongo
+      - MONGODB_PORT=27017
+      - MONGODB_DB=tqs
+    ports:
+      - "8080:8080"
   mongo:
     image: mongo
     environment:
