--- a/k8s/tqs/templates/deployment.yaml
+++ b/k8s/tqs/templates/deployment.yaml
@@ -34,7 +34,7 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: 8080
+              containerPort: {{ .Values.tqs.port }}
               protocol: TCP
           livenessProbe:
             httpGet:
