--- a/k8s/tqs/templates/deployment.yaml
+++ b/k8s/tqs/templates/deployment.yaml
@@ -44,6 +44,7 @@ spec:
             httpGet:
               path: /healthz
               port: http
+              initialDelaySeconds: 5
           env:
             - name: PORT
               valueFrom:
